秋招知识点

--- a/秋招知识点.md
+++ b/秋招知识点.md
@@ -42,7 +42,11 @@
 38. lr怎么优化，对于特征比较多的时候怎么优化，sgd梯度下降法的时候怎么优化计算
 39. 牛顿法中怎么优化海塞矩阵的计算
 40. 从很多文章中找到和当前这个文章匹配的文章 当时回答用关键词匹配，先标题匹配，然后聚类，再文章匹配 面试官回答：搜索的方法，关键词倒排索引
-41. 
+41. 几种树模型的原理和对比，朴素贝叶斯分类器原理以及公式，出现估计概率值为 0 怎么处理（拉普拉斯平滑），缺点； k-means 聚类的原理以及缺点及对应的改进；
+42. 线性回归与逻辑回归区别等
+43. RF 与 GBDT 区别，原理优缺点适用场景分析，
+44. 梯度下降法的原理以及各个变种（批量梯度下降，随机梯度下降法， mini 梯度下降法），以及这几个方法会不会有局部最优问题，牛顿法原理和适用场景，有什么缺点，如何改进（拟牛顿法）
+45.  tf-idf ， word2vec ， LDA
 
 
     
@@ -68,6 +72,12 @@
 	 18. 最大子数组乘积
 	 19. 矩阵从左上角走到右下角
 	 20. 无序数组的n个数之和等于k，找出这样的数组
+	 21. 实现求正整数平方根整数部分的函数（使用梯度下降）
+	 22. 多位数用链表存储（ e.g. 123 用 1->2->3 存储），实现相加功能函数 
+	 23. 链表倒数第 k 节点；
+	 24. 二叉树打印路径，
+	 25. 矩阵中将 0 元素所在行列全置 0 的最优空间解法
+	 26. 堆排序
 
     
 
