秋招知识点

--- a/秋招知识点.md
+++ b/秋招知识点.md
@@ -1,6 +1,6 @@
 # 秋招知识点
 
-1. sgd和牛顿法的区别， 拟牛顿法和牛顿法的关系，拟牛顿法解决了牛顿法哪个问题？ 牛顿法推到，牛顿法在什么时候只需要迭代一次就能求解，什么时候牛顿法不能适用？
+1. sgd和牛顿法的区别， 拟牛顿法和牛顿法的关系，拟牛顿法解决了牛顿法哪个问题？ 牛顿法推到，牛顿法在什么时候只需要迭代一次就能求解，什么时候牛顿法不能适用？ 牛顿法怎么求Hissen矩阵，知道拟牛顿法吗
 2. 正则化方法？l1与l2的区别，为什么可以克服过拟合？l1正则假设的参数分布是什么 +2
 3. 梯度消失问题的解决方案？batch normalization为什么能够提升训练速度？
 4. 场景题：需要根据用户的query来设计一个广告投放系统，怎么设计，具体到模型设计细节。输入query要能输出广告的一个rank。中间涉及pairwise版模型的设计，以及sentence embedding的设计细节。   
@@ -10,21 +10,21 @@
 8. 分词问题有哪些解决办法？词典，crf还说了lstm，问lstm怎么做分词 
 9. gbdt+lr，cnn，lstm，attention，项目中深度学习模型如何克服过拟合，linear blending等模型融合方法，label propogation algorithm, spark，时间序列相似度索引等
 10. 把RF和GBDT详细讲讲，原理差别，以及优缺点；你能从方差和偏差的角度讲讲RF和GBDT的不同吗？
-11. LR和SVM
-12. kmeans
+11. LR和SVM LR和SVM的区别 说LR和SVM损失函数。
+12. kmeans 解释k-means原理 距离的计算方法
 13. GBDT， adaboost 随机森林
 14. 构建决策树遇到某个属性缺失你怎么处理的？
 15. HMM 什么优缺点。
 16. lr为什么一般不用核函数而svm线性不可分的时候用核函数； lr求解过程中有什么优化技巧（随机梯度下降法，mini-batch随机梯度下降）
 17. svm引入拉格朗日算子之后原问题其实就可以求解，为什么要转换成对偶问题，两者的适用情况分别是什么
-18. gbdt处理回归问题和分类问题的时候分别是怎么解决的（loss function不一样）
+18. gbdt处理回归问题和分类问题的时候分别是怎么解决的（loss function不一样） GBDT的原理，以及常用的调参的参数
 19. gbdt目标函数中为什么要用梯度去拟合残差（除了均方误差的情况一阶导是残差外，其他的情况没有残差的概念）
 20. RF在有很多树的情况下会不会过拟合（不会过拟合，
 随机森林中的决策树的泛化误差都收敛于：limn→∞PE∗=Pxy(PΘ(k(X,Θ)=Y)−maxj≠YPΘ(k(X,Θ)≠Y)>0)limn→∞PE∗=Pxy(PΘ(k(X,Θ)=Y)−maxj≠YPΘ(k(X,Θ)≠Y)>0)
 随着随机森林中决策树数量(nn)的增加，随机森林泛化误差(PE∗PE∗)将趋向一个上界。随机森林对未知实例有很好的扩展性，也就是说随机森林随着决策树数量的增多不易过拟合
 21. 从偏差和方差的角度解释， 具体请参考https://rstudio-pubs-static.s3.amazonaws.com/219677_bab9695843664453a452941c8416e38f.html）
 22. xgboost中是怎么处理缺失值的 +2
-23. xgboost的原理 +3
+23. xgboost的原理 +3 xgboost的跟GBDT比优点都有哪些
 24. 说说对特征工程的理解 特征工程怎么做的
 25. lr为什么用sigmoid函数
 26. 决策树怎么处理缺失值
@@ -47,11 +47,26 @@
 43. RF 与 GBDT 区别，原理优缺点适用场景分析，
 44. 梯度下降法的原理以及各个变种（批量梯度下降，随机梯度下降法， mini 梯度下降法），以及这几个方法会不会有局部最优问题，牛顿法原理和适用场景，有什么缺点，如何改进（拟牛顿法）
 45.  tf-idf ， word2vec ， LDA
+46. 画lstm的图，画CNN的图
+47. 推导lr
+48. 方差偏差分解的公式
+49. 过拟合得解决方法
+50. bagging 和 boosting
+51. kmeans怎么训练
+52. Xgboost中的行抽样，可以起到哪些作用
+53. xgb中l1正则怎么用的
+54. 集成学习介绍（boosting bagging stacking原理）
+55. stacking blending区别
+56. 详细分析xgb原理，怎么选分裂点，为什么用二阶泰勒展开，xgb里面正则项怎么表示。L1，L2正则区别（我用概率跟最优化理论分析完，总监大佬又让我从梯度下降解释为什么L1稀疏），L1正则如何求梯度。xgb，gbdt区别，gbdt为什么用梯度，用梯度什么好处
+57. 决策树对数据的划分进行了更细的粒度，这样容易造成数据的过拟合，有什么解决办法？
+58. AUC是什么？我说了是ROC曲线下面积，但是想不起来ROC是啥。我都是做序列数据，没做过二分类问题。
+59. svd，lda主题模型的区别和联系
+60. pca
+61. BP是怎么求导的 推导BP神经网络的反向求导。（可以用均方损失函数）
 
 
     
 # 编程题
-	
 	 1. 编程题：给定一个数组，求最大的连续子序列和，O(n)时间与O(1)空间
 	 2. 编程：有一个坐标轴，上面有很多点，每个点有坐标，求长度为L的绳子最多能够覆盖几个点。
 	 3. 判断单链表有环
@@ -72,12 +87,38 @@
 	 18. 最大子数组乘积
 	 19. 矩阵从左上角走到右下角
 	 20. 无序数组的n个数之和等于k，找出这样的数组
-	 21. 实现求正整数平方根整数部分的函数（使用梯度下降）
+	 21. 实现求正整数平方根整数部分的函数（使用梯度下降）给一个float的数，求算术平方根。+2
 	 22. 多位数用链表存储（ e.g. 123 用 1->2->3 存储），实现相加功能函数 
 	 23. 链表倒数第 k 节点；
 	 24. 二叉树打印路径，
 	 25. 矩阵中将 0 元素所在行列全置 0 的最优空间解法
-	 26. 堆排序
+	 26. 堆排序 一个数组中找前k个大的数 一个数组，找出第k大的数 +3
+	 27. 手写二分查找
+	 28. 手写跳台阶的算法题
+	 29. 中缀表达式变后缀
+	 30. 大顶堆怎么插入删除
+	 31. hash表怎么解决冲突
+	 32. 编写一个快排
+	 33. 写一个 strcpy 函数
+	 34. 大数相乘 加减乘除
+	 35. python 中 list 底层怎么实现 list dict有什么区别 手写对dict排序
+	 36. 手写代码 两排序链表合并
+	 37. 3、python 中 key-value的数据结构 dict底层如何实现 如何解决哈希冲突 一个python的dict，按照key-value存储，如何按照value排序
+	 38. 算法题 两个300G的大文件，求两个文件的交集
+	 39. 数组中和最大子序列
+	 40. 一个无序的无重复的正数数组，给一个target ，找出数组中和为target的序列，每个数可以选择多次
+	 41. 覆盖字符串所有字符的最小子串，只提供思路就行。Leetcode第76题
+	 42. 找出0-1矩阵里，全1组成的最大矩形面积。这题又是Leetcode第85题，hard难度。
+	 43. 字符串出现第k多的字符，leetcode上原题
+	 44. 大数原地相乘，32位位宽乘两个32位的大数
+	 45. 三种砖块，分别是1*1,1*2,1*3，拼成1*N，有多少种拼法？
+	 46. 链表，原址变换为：奇数在前，偶数在后，相对顺序不变
+	 47. 1*1的卷积核的作用
+	 48. TensorFlow interactivesession 和 session的区别
+	 49. 描述迪杰斯特拉算法
+	 50. 描述KMP算法
+	 51. 两个有序数组的合并 合并两个排序了的链表 +2
+
 
     
 
