秋招知识点

--- a/秋招知识点.md
+++ b/秋招知识点.md
@@ -63,6 +63,7 @@
 59. svd，lda主题模型的区别和联系
 60. pca
 61. BP是怎么求导的 推导BP神经网络的反向求导。（可以用均方损失函数）
+62. 准确率&召回率
 
 
     
@@ -78,7 +79,7 @@
 	 9. 斐波那契数列
 	 10. 字符串排序 计数排序
 	 11. 实现atoi()字符串整型
-	 12. 快排
+	 12. 快排 +2
 	 13. 链表反转
 	 14. 八皇后问题（让说思路，没说出来）
 	 15. 一个班级n个人，考的分数在1-100分，找出n/2同学的分数 桶paixu
@@ -118,6 +119,7 @@
 	 49. 描述迪杰斯特拉算法
 	 50. 描述KMP算法
 	 51. 两个有序数组的合并 合并两个排序了的链表 +2
+	 52. 二叉树遍历
 
 
     
