秋招知识点

--- a/秋招知识点.md
+++ b/秋招知识点.md
@@ -80,7 +80,7 @@
 	 10. 字符串排序 计数排序
 	 11. 实现atoi()字符串整型
 	 12. 快排 +2
-	 13. 链表反转
+	 13. 链表反转 +2
 	 14. 八皇后问题（让说思路，没说出来）
 	 15. 一个班级n个人，考的分数在1-100分，找出n/2同学的分数 桶paixu
 	 16. n个数中随机抽取k个数，怎么随机抽
@@ -120,6 +120,8 @@
 	 50. 描述KMP算法
 	 51. 两个有序数组的合并 合并两个排序了的链表 +2
 	 52. 二叉树遍历
+	 53. 非递归实现二叉树中序遍 冒泡排序
+	 54. 哈希一致性
 
 
     
