--- a/左程云进阶课程.md
+++ b/左程云进阶课程.md
@@ -3,3 +3,66 @@
 #### 01-进阶课程
 
 题目1: KMP 算法详解与应用
+
+```   
+class Solution {
+    vector<int> getNext(string s)
+    {
+        int m = s.length();
+        
+        vector<int> next(m);
+        next[0] = -1;
+        if (m == 1)
+            return next;
+        
+        next[1] = 0;
+        int pos = 2;
+        int cn = 0;
+        
+        while(pos < m)
+        {
+            if (s[pos-1] == s[cn])
+            {
+                next[pos++] = ++cn;
+            }
+            else if (cn > 0)
+            {
+                cn = next[cn];
+            }
+            else
+            {
+                next[pos++] =  0;
+            }
+        }
+       return next;
+    }
+public:
+    int strStr(string s, string m)
+    {
+        if (m.length() == 0)
+            return 0;
+        if (m.length() < 1 || s.length() < m.length())
+            return -1;
+        int si = 0;
+        int mi = 0;
+        vector<int> next = getNext(m);
+        while(si < s.length() && mi < m.length())
+        {
+            if(s[si] == m[mi])
+            {
+                si++;
+                mi++;
+            }
+            else if (next[mi] == -1)
+            {
+                si++;
+            }
+            else
+            {
+                mi = next[mi];
+            }
+        }
+        return mi == m.length() ? si - mi : -1;
+    }
+};
+```
