--- a/左程云进阶课程.md
+++ b/左程云进阶课程.md
@@ -9,16 +9,13 @@ class Solution {
     vector<int> getNext(string s)
     {
         int m = s.length();
-        
         vector<int> next(m);
         next[0] = -1;
         if (m == 1)
-            return next;
-        
+            return next;    
         next[1] = 0;
         int pos = 2;
         int cn = 0;
-        
         while(pos < m)
         {
             if (s[pos-1] == s[cn])
@@ -37,6 +34,7 @@ class Solution {
        return next;
     }
 public:
+    // KMP算法
     int strStr(string s, string m)
     {
         if (m.length() == 0)
