--- a/左程云进阶课程.md
+++ b/左程云进阶课程.md
@@ -4,7 +4,11 @@
 
 题目1: KMP 算法详解与应用
 
+[28. Implement strStr()](https://leetcode.com/problems/implement-strstr/)  
+
 ```   
+//[28. Implement strStr()](https://leetcode.com/problems/implement-strstr/)  
+
 class Solution {
     vector<int> getNext(string s)
     {
@@ -64,5 +68,6 @@ public:
     }
 };
 ```
-
-应用 [214. Shortest Palindrome](https://leetcode.com/problems/shortest-palindrome/submissions/)
+相关题目  
+[214. Shortest Palindrome](https://leetcode.com/problems/shortest-palindrome/submissions/)  
+[459. Repeated Substring Pattern](https://leetcode.com/problems/repeated-substring-pattern/)
