--- a/左程云进阶课程.md
+++ b/左程云进阶课程.md
@@ -12,14 +12,14 @@
 class Solution {
     vector<int> getNext(string s)
     {
-        int m = s.length();
+        int m = s.length();      
         vector<int> next(m);
         next[0] = -1;
         if (m == 1)
-            return next;    
+            return next;       
         next[1] = 0;
         int pos = 2;
-        int cn = 0;
+        int cn = 0;     
         while(pos < m)
         {
             if (s[pos-1] == s[cn])
@@ -38,33 +38,32 @@ class Solution {
        return next;
     }
 public:
-    // KMP算法
     int strStr(string s, string m)
     {
         if (m.length() == 0)
             return 0;
         if (m.length() < 1 || s.length() < m.length())
             return -1;
-        int si = 0;
-        int mi = 0;
+        int i = 0;
+        int j = 0;
         vector<int> next = getNext(m);
-        while(si < s.length() && mi < m.length())
+        while(i < s.length() && j < m.length())
         {
-            if(s[si] == m[mi])
+            if(s[i] == m[j])  // 如果当前字符相等,说明匹配上了,那么两个指针都向右走
             {
-                si++;
-                mi++;
-            }
-            else if (next[mi] == -1)
+                i++;
+                j++;
+            } // 下面两种情况是 当前字符不相等 该如何匹配
+            else if (next[j] == -1)
             {
-                si++;
-            }
+                i++;
+            }  
             else
             {
-                mi = next[mi];
+                j = next[j];
             }
         }
-        return mi == m.length() ? si - mi : -1;
+        return j == m.length() ? i - j : -1;
     }
 };
 ```
