--- a/左程云进阶课程.md
+++ b/左程云进阶课程.md
@@ -2,7 +2,7 @@
 
 #### 01-进阶课程
 
-题目1: KMP 算法详解与应用
+**题目1: KMP 算法详解与应用**
 
 [28. Implement strStr()](https://leetcode.com/problems/implement-strstr/)  
 
@@ -70,3 +70,5 @@ public:
 相关题目  
 [214. Shortest Palindrome](https://leetcode.com/problems/shortest-palindrome/submissions/)  
 [459. Repeated Substring Pattern](https://leetcode.com/problems/repeated-substring-pattern/)
+
+**题目2: Manachar 算法详解与应用 （进阶1--> 1:50:36 还没看）**
