增加滑动串口系列问题

--- a/左程云进阶课程.md
+++ b/左程云进阶课程.md
@@ -1,10 +1,8 @@
 ## 左程云进阶课程
 
-#### 01-进阶课程
-
-**题目1: KMP 算法详解与应用**
-
-[28. Implement strStr()](https://leetcode.com/problems/implement-strstr/)  
+#### 01-进阶课程    
+**题目1: KMP 算法详解与应用**  
+[28. Implement strStr()](https://leetcode.com/problems/implement-strstr/)   
 
 ```   
 //[28. Implement strStr()](https://leetcode.com/problems/implement-strstr/)  
@@ -71,7 +69,44 @@ public:
 [214. Shortest Palindrome](https://leetcode.com/problems/shortest-palindrome/submissions/)  
 [459. Repeated Substring Pattern](https://leetcode.com/problems/repeated-substring-pattern/)
 
-**题目2: Manachar 算法详解与应用 （进阶1--> 1:50:36 还没看）**
+**题目2: Manachar 算法详解与应用 （进阶1--> 1:50:36 还没看）**  
+**题目3: BFPRT 算法详解与应用 （进阶2 --> 0:12:57-1:14:33 还没看）**
 #### 02-进阶课程
 
-**题目3: BFPRT 算法详解与应用 （进阶2 --> 0:12:57-1:14:33 还没看）**
+
+题目2: 窗口以及窗口内最大值或最小值的更新结构(单调双向队列)
+
+生成窗口的最大值数组 [239. Sliding Window Maximum](https://leetcode.com/problems/sliding-window-maximum/)
+
+```
+class Solution {
+public:
+    vector<int> maxSlidingWindow(vector<int>& nums, int k)
+    {
+        if (nums.empty() || nums.size() < k || k < 1)
+        {
+            vector<int> res;
+            return res;
+        }
+        deque<int> q; // 求最大值要保持队列从头部到尾部是单调递减的
+        vector<int> res(nums.size() - k + 1, 0);
+        int count = 0;
+        
+        for (int i = 0; i < nums.size(); i++)
+        {
+           	// 如果当前值比队尾数字大，则一直弹出，直到当前值比队尾元素小开始入队列
+            while(!q.empty() && nums[i] >= nums[q.back()])
+                q.pop_back();
+            q.push_back(i);
+            if (q.front() == i - k)
+                q.pop_front();
+            if (i >= k-1)
+                res[count++] = nums[q.front()];
+        }
+        return res;
+    }
+};
+```
+
+题目3: 最大值减去最小值小于或等于num的子数组数量
+
