--- a/左程云进阶课程.md
+++ b/左程云进阶课程.md
@@ -120,7 +120,7 @@ public:
 morris遍历 
 
 
-#### 04-进阶课程 （进阶4-1 ) AVL 搜索二叉树的增删改查
+#### 04-进阶课程 （进阶4-1 2:23:44）
 题目3: 在二叉树上，何为一个节点的后继节点？ 何为搜索二叉树？如何实现搜索二叉树的查找？插入？删除？
 
-
+pdf4 题目一： [218. The Skyline Problem](https://leetcode.com/problems/the-skyline-problem/) LeetCode上原题
