--- a/左程云进阶课程.md
+++ b/左程云进阶课程.md
@@ -125,3 +125,5 @@ morris遍历
 
 
 pdf4 题目一： [218. The Skyline Problem](https://leetcode.com/problems/the-skyline-problem/) LeetCode上原题（1:27:58~2:26:51）
+
+题目五: 给定一个数组arr，和一个整数num,求在arr中累加和等于num的最长子数组的长度 （2:26:51）
