增加回溯类题目

--- a/左程云进阶课程.md
+++ b/左程云进阶课程.md
@@ -126,5 +126,9 @@ morris遍历
 
 pdf4 题目一： [218. The Skyline Problem](https://leetcode.com/problems/the-skyline-problem/) LeetCode上原题（1:27:58~2:26:51）
 
-题目五: 给定一个数组arr，和一个整数num,求在arr中累加和等于num的最长子数组的长度 （2:26:51） 算法原型
+pdf4 题目五: 给定一个数组arr，和一个整数num,求在arr中累加和等于num的最长子数组的长度 （2:26:51） 算法原型
 变形题 奇数偶数数目相等的最长子数组  异或和为0的最多子数组
+
+#### 05-进阶课程
+
+pdf4 题目4: 给定一棵二叉树的头结点head, 返回最大搜索二叉子树的大小 [333. Largest BST Subtree 最大的二分搜索子树](https://www.cnblogs.com/grandyang/p/5188938.html)  leetcode 付费题目
