进阶版课程

--- a/左程云进阶课程.md
+++ b/左程云进阶课程.md
@@ -143,3 +143,9 @@ pdf3 题目二： LRU  （1:53:50开始） [146. LRU Cache](https://leetcode.com
 
 
 #### 06-进阶课程
+
+接着上面的LRU讲LFU （0~1:07）
+
+pdf4 题目7
+
+跳表结构 （2:13:30）
