--- a/左程云进阶课程.md
+++ b/左程云进阶课程.md
@@ -1,6 +1,6 @@
 ## 左程云进阶课程
 
-#### 01-进阶课程    
+### 01-进阶课程    
 **题目1: KMP 算法详解与应用**  
 [28. Implement strStr()](https://leetcode.com/problems/implement-strstr/)   
 
@@ -71,7 +71,7 @@ public:
 
 **题目2: Manachar 算法详解与应用 （进阶1--> 1:50:36 还没看）**  
 **题目3: BFPRT 算法详解与应用 （进阶2 --> 0:12:57-1:14:33 还没看）**
-#### 02-进阶课程
+### 02-进阶课程
 
 
  **窗口以及窗口内最大值或最小值的更新结构(单调双向队列)**
@@ -116,11 +116,11 @@ public:
 题目5: 构造maxTree
 题目6: 直方图，以及最大全为1的子矩阵面积
 
-#### 03-进阶课程 （进阶3-1 2:23:44）3-1后面的都是Morris遍历
+### 03-进阶课程 （进阶3-1 2:23:44）3-1后面的都是Morris遍历
 morris遍历 
 
 
-#### 04-进阶课程 （进阶4-1 2:23:44）
+### 04-进阶课程 （进阶4-1 2:23:44）
 题目3: 在二叉树上，何为一个节点的后继节点？ 何为搜索二叉树？如何实现搜索二叉树的查找？插入？删除？
 
 
@@ -142,10 +142,15 @@ pdf5 题目二：
 pdf3 题目二： LRU  （1:53:50开始） [146. LRU Cache](https://leetcode.com/problems/lru-cache/)
 
 
-#### 06-进阶课程
+### 06-进阶课程
 
 接着上面的LRU讲LFU （0~1:07）
 
 pdf4 题目7
 
 跳表结构 （2:13:30）
+
+### 07-进阶课程  暴力递归到动态规划 （1:01:30）
+
+pdf6 题目一:
+
