--- a/左程云进阶课程.md
+++ b/左程云进阶课程.md
@@ -154,3 +154,15 @@ pdf4 题目7
 
 pdf6 题目一:
 
+pdf6 题目二
+
+额外题目: 机器人走动 
+
+### 08-进阶课程  暴力递归到动态规划 （1:01:30）
+
+pf6: 题目4
+
+pdf6: 题目5 注意区别
+
+pdf6: 题目6 约瑟夫环
+
