add Predict the Winner

--- a/高频题笔记.md
+++ b/高频题笔记.md
@@ -1,6 +1,5 @@
 ## 01 算法高频
 
-题目一: 有一排正数，玩家A和玩家B都可以看到。
-每位玩家在拿走数字的时候，都只能从最左和最右的数中选择一个。
-玩家A先拿，玩家B再拿，两人交替拿走所有的数字，
-两人都力争自己拿到的数的总和比对方多。请返回最后获胜者的分数。
+题目一: 有一排正数，玩家A和玩家B都可以看到。每位玩家在拿走数字的时候，都只能从最左和最右的数中选择一个。玩家A先拿，玩家B再拿，两人交替拿走所有的数字，两人都力争自己拿到的数的总和比对方多。请返回最后获胜者的分数。
+
+[486. Predict the Winner](https://leetcode.com/problems/predict-the-winner/)
