add Predict the Winner

--- a/高频题笔记.md
+++ b/高频题笔记.md
@@ -3,3 +3,49 @@
 题目一: 有一排正数，玩家A和玩家B都可以看到。每位玩家在拿走数字的时候，都只能从最左和最右的数中选择一个。玩家A先拿，玩家B再拿，两人交替拿走所有的数字，两人都力争自己拿到的数的总和比对方多。请返回最后获胜者的分数。
 
 [486. Predict the Winner](https://leetcode.com/problems/predict-the-winner/)
+
+```
+
+class Solution {
+    // 作为先发者 在i...j范围上先发获得的收益
+    int f(vector<int>& nums, int i, int j)
+    {
+        if (i == j) // 如果只有一个数并且又是先发者，则直接拿走该数
+            return nums[i];
+        
+        else return max(s(nums, i+1, j) + nums[i], s(nums, i, j-1) + nums[j]);
+        
+        
+    }
+    // / 作为后发者 在i...j范围上后发获得的收益
+    int s(vector<int>& nums, int i, int j)
+    {
+        if (i == j)
+        {
+            return 0;
+        }
+        else
+            return min(f(nums, i+1, j), f(nums, i, j-1));
+        
+    }
+    
+    
+public:
+    bool PredictTheWinner(vector<int>& nums) {
+        
+        if (nums.empty())
+            return false;
+        
+        int sum = 0;
+        for(int i = 0; i < nums.size(); i++)
+            sum += nums[i];
+        
+        
+        int res = f(nums, 0, nums.size()-1);
+        
+        return sum -res > res ? false: true;
+        
+        
+    }
+};
+```
