--- a/高频题笔记.md
+++ b/高频题笔记.md
@@ -5,43 +5,38 @@
 [486. Predict the Winner](https://leetcode.com/problems/predict-the-winner/)
 
 ```
-class Solution {
+class Solution
+{
     // 作为先发者 在i...j范围上先发获得的收益
-    int f(vector<int>& nums, int i, int j)
+    int f(vector<int> &nums, int i, int j)
     {
         if (i == j) // 如果只有一个数并且又是先发者，则直接拿走该数
             return nums[i];
-        
-        else return max(s(nums, i+1, j) + nums[i], s(nums, i, j-1) + nums[j]);
-        
-        
+
+        else
+            return max(s(nums, i + 1, j) + nums[i], s(nums, i, j - 1) + nums[j]);
     }
     // / 作为后发者 在i...j范围上后发获得的收益
-    int s(vector<int>& nums, int i, int j)
+    int s(vector<int> &nums, int i, int j)
     {
         if (i == j)
         {
             return 0;
         }
-        else
-            return min(f(nums, i+1, j), f(nums, i, j-1));
-    }    
+        else // 对方也是绝顶聪明,作为后发者,此时只能选先发者拿完之后 剩下最小的
+            return min(f(nums, i + 1, j), f(nums, i, j - 1));
+    }
 public:
-    bool PredictTheWinner(vector<int>& nums) {
-        
+    bool PredictTheWinner(vector<int> &nums)
+    {
         if (nums.empty())
             return false;
-        
         int sum = 0;
-        for(int i = 0; i < nums.size(); i++)
+        for (int i = 0; i < nums.size(); i++)
             sum += nums[i];
-        
-        
-        int res = f(nums, 0, nums.size()-1);
-        
-        return sum -res > res ? false: true;
-        
-        
+
+        int res = f(nums, 0, nums.size() - 1);
+        return sum - res > res ? false : true;
     }
 };
 
