add Predict the Winner

--- a/高频题笔记.md
+++ b/高频题笔记.md
@@ -39,5 +39,69 @@ public:
         return sum - res > res ? false : true;
     }
 };
+```
+
+题目二：1、已知一个字符串都是由左括号(和右括号)组成，判断该字符串是否是有效的括号组合。
+[20. Valid Parentheses](https://leetcode.com/problems/valid-parentheses/)
 
 ```
+ bool isValid(string s)
+{
+    stack<char> st;
+    for (char c : s)
+    {
+        if (c == '(' || c == '{' || c == '[')
+        {
+            st.push(c);
+        }
+        else
+        {
+            if (st.empty())
+                return false;
+            if (c == ')' && st.top() != '(')
+                return false;
+            if (c == '}' && st.top() != '{')
+                return false;
+            if (c == ']' && st.top() != '[')
+                return false;
+            st.pop();
+        }
+    }
+    return st.empty();
+}
+```
+1进阶、已知一个字符串都是由左括号(和右括号)组成，判断该字符串是否是有效的括号组合。
+
+[32. Longest Valid Parentheses](https://leetcode.com/problems/longest-valid-parentheses/)
+
+```
+int longestValidParentheses(string s)
+{
+    int n = s.length();
+    vector<int> dp(n, 0);  //dp[i]表示以s[i]结尾的最长有效字符串长度
+    int res = 0;
+    for(int i = 1; i < n; i++)
+    {
+        if (s[i] == '(') // 如果遇到左括号，说明以当前字符结尾不可能形成有效括号字符串，所以dp[i] = 0;
+            dp[i] = 0; 
+
+        if (s[i] == ')')  // 当前字符为右括号时，那么找到前一个字符位置形成的最长有效括号字符串的长度，在这个长度之前的字符串如果是左括号，那么可以形成有效括号字符串
+            // 即 dp[i] = dp[i-1] + 2, 需要注意的是 需要加上 前一个字符位置形成的有效括号字符串；
+        {
+            int pre = i - dp[i-1] - 1;
+            if (pre >= 0 && s[pre] == '(')
+            {
+                dp[i] = dp[i-1] + 2 + (pre > 0 ? dp[pre-1] : 0);
+            }
+        }
+        res = max(res, dp[i]);
+    }
+    return res;
+}
+```
+
+
+题目三：
+1、给定一个数组，值全是正数，请返回累加和为给定值k的最长子数组长度。
+2、给定一个数组，值可以为正、负和0，请返回累加和为给定值k的最长子数组长度。
+3、给定一个数组，值可以为正、负和0，请返回累加和小于等于k的最长子数组长度。
