--- a/高频题笔记.md
+++ b/高频题笔记.md
@@ -105,3 +105,9 @@ int longestValidParentheses(string s)
 1、给定一个数组，值全是正数，请返回累加和为给定值k的最长子数组长度。
 2、给定一个数组，值可以为正、负和0，请返回累加和为给定值k的最长子数组长度。
 3、给定一个数组，值可以为正、负和0，请返回累加和小于等于k的最长子数组长度。
+
+
+## 01 算法高频
+题目一:  实现栈中元素的逆序，只能用递归的方法
+
+题目二: 小和问题（改写归并排序）
