--- a/高频题笔记.md
+++ b/高频题笔记.md
@@ -111,3 +111,25 @@ int longestValidParentheses(string s)
 题目一:  实现栈中元素的逆序，只能用递归的方法
 
 题目二: 小和问题（改写归并排序）
+
+题目三: 子数组最大累加和 leetcode 53
+[53. Maximum Subarray](https://leetcode.com/problems/maximum-subarray/)
+
+```
+int maxSubArray(vector<int>& nums) 
+{
+    if (nums.empty())
+        return 0;
+    int res = INT_MIN;
+    int n = nums.size();
+    int cur = 0;
+    for(int i = 0; i < n; i++)
+    {
+        cur += nums[i];
+        res = max(cur, res);
+        cur = cur < 0 ? 0 : cur;
+    }
+    return res;
+}
+```
+ 
