--- a/高频题笔记.md
+++ b/高频题笔记.md
@@ -107,7 +107,7 @@ int longestValidParentheses(string s)
 3、给定一个数组，值可以为正、负和0，请返回累加和小于等于k的最长子数组长度。
 
 
-## 01 算法高频
+## 02 算法高频
 题目一:  实现栈中元素的逆序，只能用递归的方法
 
 题目二: 小和问题（改写归并排序）
@@ -132,4 +132,48 @@ int maxSubArray(vector<int>& nums)
     return res;
 }
 ```
+
+题目四：视频2 （25：45）
+
+## 03 算法高频
+题目二： 图中有多少个岛
+[200. Number of Islands](https://leetcode.com/problems/number-of-islands/)
+
+```
+class Solution
+{
+    void dfs(vector<vector<char>> &grid, int i, int j, int m, int n)
+    {
+        if (i < 0 || i >= m || j < 0 || j >= n || grid[i][j] != '1')
+            return;
+        grid[i][j] = '2';
+        dfs(grid, i + 1, j, m, n);
+        dfs(grid, i - 1, j, m, n);
+        dfs(grid, i, j + 1, m, n);
+        dfs(grid, i, j - 1, m, n);
+    }
+public:
+    int numIslands(vector<vector<char>> &grid)
+    {
+        if (grid.empty())
+            return 0;
+        int m = grid.size();
+        int n = grid[0].size();
+        int res = 0;
+        for (int i = 0; i < m; i++)
+        {
+            for (int j = 0; j < n; j++)
+            {
+                if (grid[i][j] == '1')
+                {
+                    res++;
+                    dfs(grid, i, j, m, n);
+                }
+            }
+        }
+        return res;
+    }
+};
+```
+
  
