236. Lowest Common Ancestor of a Binary Tree

--- a/高频题笔记.md
+++ b/高频题笔记.md
@@ -189,8 +189,6 @@ public:
 };
 ```
 
-```
-
 题目三: 子数组最大累加和 leetcode 53
 [53. Maximum Subarray](https://leetcode.com/problems/maximum-subarray/)
 
@@ -254,5 +252,25 @@ public:
     }
 };
 ```
+
+题目一： 最近公共节点祖先
+[236. Lowest Common Ancestor of a Binary Tree](https://leetcode.com/problems/lowest-common-ancestor-of-a-binary-tree/)
+
+```
+TreeNode *lowestCommonAncestor(TreeNode *root, TreeNode *p, TreeNode *q)
+{
+    if (root == nullptr || root == p || root == q)
+        return root;
+    TreeNode *left = lowestCommonAncestor(root->left, p, q);
+    TreeNode *right = lowestCommonAncestor(root->right, p, q);
+
+    if (left && right)
+        return root;
+    else
+        return left != nullptr ? left : right;
+}
+```
+
+
 
  
