--- a/高频题笔记.md
+++ b/高频题笔记.md
@@ -271,6 +271,97 @@ TreeNode *lowestCommonAncestor(TreeNode *root, TreeNode *p, TreeNode *q)
 }
 ```
 
+## 04 算法高频
+附加：数组最大乘积
+[152. Maximum Product Subarray](https://leetcode.com/problems/maximum-product-subarray/)
+
+```
+int maxProduct(vector<int>& A)
+{ 
+    int res = A[0];  
+    int prevMin = A[0], prevMax = A[0];  
+    int curMin, curMax;  
+    for (int i = 1; i < A.size(); ++i) 
+    {  
+        curMin = min(min(prevMax * A[i], prevMin * A[i]), A[i]);  
+        curMax = max(max(prevMax * A[i], prevMin * A[i]), A[i]);  
+        prevMin = curMin;  
+        prevMax = curMax;  
+        res = max(curMax, res);  
+    }  
+    return res;  
+}
+```
+题目一： 最大子矩阵累加和 没太懂
+
+题目二: 接雨水
+[42. Trapping Rain Water](https://leetcode.com/problems/trapping-rain-water/)
+
+```
+// 解法一
+int trap(vector<int> &height)
+{
+    if (height.empty())
+        return 0;
+
+    int res = 0;
+    int i = 0;
+    stack<int> monoStack; // 因为要求一个数左边比他大和右边比他大,所以应该是一个单调递减的栈
+    while (i < height.size())
+    {
+        // 如果满足入栈条件,则直接入栈
+        if (monoStack.empty() || height[i] < height[monoStack.top()])
+        {
+            monoStack.push(i++);
+        }
+        else// 如果不满足入栈条件,则弹出栈顶元素,这个时候可以结算当前元素,栈顶元素的下一个元素则为左边界，
+        当前遍历到的height[i]则为右边界
+        {
+            int tmp = monoStack.top();
+            monoStack.pop();
+            if (monoStack.empty())
+                continue;
+
+            int h = min(height[i], height[monoStack.top()]);
+            res = res + (h - height[tmp]) * (i - monoStack.top() - 1);
+        }
+    }
+    return res;
+}
+
+// 解法二：还不太懂
+int trap(vector<int>& height) 
+ {
+    if (height.empty())
+        return 0;
+    
+    int n = height.size();
+    int res = 0;
+    int left_max = height[0];
+    int right_max = height[n-1];
+    
+    int l = 1;
+    int r = n - 2;
+    while(l <= r)
+    {
+        if (left_max <= right_max)
+        {
+            res += max(0, left_max - height[l]);
+            left_max = max(left_max, height[l]);
+            l++;
+        }
+        else
+        {
+            res += max(0, right_max - height[r]);
+            right_max = max(height[r], right_max);
+            r--;
+        }
+    }
+   return res;
+}
+```
+
+
 
 
  
