--- a/高频题笔记.md
+++ b/高频题笔记.md
@@ -301,63 +301,63 @@ int maxProduct(vector<int>& A)
 // 解法一
 int trap(vector<int> &height)
 {
-    if (height.empty())
-        return 0;
-
-    int res = 0;
-    int i = 0;
-    stack<int> monoStack; // 因为要求一个数左边比他大和右边比他大,所以应该是一个单调递减的栈
-    while (i < height.size())
-    {
-        // 如果满足入栈条件,则直接入栈
-        if (monoStack.empty() || height[i] < height[monoStack.top()])
-        {
-            monoStack.push(i++);
-        }
-        else// 如果不满足入栈条件,则弹出栈顶元素,这个时候可以结算当前元素,栈顶元素的下一个元素则为左边界，
-        当前遍历到的height[i]则为右边界
-        {
-            int tmp = monoStack.top();
-            monoStack.pop();
-            if (monoStack.empty())
-                continue;
-
-            int h = min(height[i], height[monoStack.top()]);
-            res = res + (h - height[tmp]) * (i - monoStack.top() - 1);
-        }
-    }
-    return res;
+	if (height.empty())
+	    return 0;
+		
+	int res = 0;
+	int i = 0;
+	stack<int> monoStack; // 因为要求一个数左边比他大和右边比他大,所以应该是一个单调递减的栈
+	while (i < height.size())
+	{
+	    // 如果满足入栈条件,则直接入栈
+	    if (monoStack.empty() || height[i] < height[monoStack.top()])
+	    {
+	        monoStack.push(i++);
+	    }
+	    else// 如果不满足入栈条件,则弹出栈顶元素,这个时候可以结算当前元素,栈顶元素的下一个元素则为左边界，
+	    当前遍历到的height[i]则为右边界
+	    {
+	        int tmp = monoStack.top();
+	        monoStack.pop();
+	        if (monoStack.empty())
+	            continue;
+		
+	        int h = min(height[i], height[monoStack.top()]);
+	        res = res + (h - height[tmp]) * (i - monoStack.top() - 1);
+	    }
+	}
+	return res;
 }
 
 // 解法二：还不太懂
 int trap(vector<int>& height) 
- {
-    if (height.empty())
-        return 0;
-    
-    int n = height.size();
-    int res = 0;
-    int left_max = height[0];
-    int right_max = height[n-1];
-    
-    int l = 1;
-    int r = n - 2;
-    while(l <= r)
-    {
-        if (left_max <= right_max)
-        {
-            res += max(0, left_max - height[l]);
-            left_max = max(left_max, height[l]);
-            l++;
-        }
-        else
-        {
-            res += max(0, right_max - height[r]);
-            right_max = max(height[r], right_max);
-            r--;
-        }
-    }
-   return res;
+{
+	if (height.empty())
+	    return 0;
+	    
+	int n = height.size();
+	int res = 0;
+	int left_max = height[0];
+	int right_max = height[n-1];
+	    
+	int l = 1;
+	int r = n - 2;
+	while(l <= r)
+	{
+	    if (left_max <= right_max)
+	    {
+	        res += max(0, left_max - height[l]);
+	        left_max = max(left_max, height[l]);
+	        l++;
+	    }
+	    else
+	    {
+	        res += max(0, right_max - height[r]);
+	        right_max = max(height[r], right_max);
+	        r--;
+	    }
+	}
+	return res;
 }
 ```
 
@@ -366,5 +366,9 @@ int trap(vector<int>& height)
 题目四： 划分数组
 
 
+## 05 算法高频
+题目1： 最大全1子矩阵 单调栈
 
+
+题目2： 给定arr和num,返回满足下列条件的子数组数目
  
