--- a/高频题笔记.md
+++ b/高频题笔记.md
@@ -368,6 +368,62 @@ int trap(vector<int>& height)
 
 ## 05 算法高频
 题目1： 最大全1子矩阵 单调栈
+#### [85. Maximal Rectangle](https://leetcode.com/problems/maximal-rectangle/)
+```
+class Solution {
+    int largestRectangleArea(vector<int> height)
+    {
+        stack<int> monoStack;
+        int res = 0; 
+        height.push_back(0);
+        for (int i = 0; i < height.size(); i++)
+        {
+            while(!monoStack.empty() && height[i] <= height[monoStack.top()])  // 但栈非
+            空时，且当前元素大于栈顶元素时，进行弹出操作，并且结算该弹出元素
+            {
+                int h = height[monoStack.top()]; 
+                monoStack.pop();
+                int left = monoStack.empty() ? -1 : monoStack.top();
+                // int left = monoStack.size() > 0 ? monoStack.top() : -1;
+                res = max(res, h * (i - left -1));
+                
+            }
+            monoStack.push(i);
+        
+        }
+        return res;
+    } 
+public:
+    int maximalRectangle(vector<vector<char>>& matrix) {
+        if (matrix.empty())
+            return 0;
+        
+        vector<int> heights(matrix[0].size(), 0);
+        int res = 0;
+        int m = matrix.size();
+        int n = heights.size();
+        
+        for(int i = 0; i < m; i++)
+        {
+            for(int j = 0; j < n; j++)
+            {
+                if (matrix[i][j] == '1')
+                {
+                    heights[j] += 1;
+                }
+                else
+                {
+                    heights[j] = 0;
+                }
+            }
+            
+            res = max(largestRectangleArea(heights), res);
+            
+        }
+        return res;
+    }
+};
+```
 
 
 题目2： 给定arr和num,返回满足下列条件的子数组数目
