--- a/高频题笔记.md
+++ b/高频题笔记.md
@@ -378,7 +378,7 @@ class Solution {
         height.push_back(0);
         for (int i = 0; i < height.size(); i++)
         {
-            while(!monoStack.empty() && height[i] <= height[monoStack.top()])  // 但栈非
+            while(!monoStack.empty() && height[i] <= height[monoStack.top()])  // 但 栈非
             空时，且当前元素大于栈顶元素时，进行弹出操作，并且结算该弹出元素
             {
                 int h = height[monoStack.top()]; 
@@ -386,10 +386,8 @@ class Solution {
                 int left = monoStack.empty() ? -1 : monoStack.top();
                 // int left = monoStack.size() > 0 ? monoStack.top() : -1;
                 res = max(res, h * (i - left -1));
-                
             }
             monoStack.push(i);
-        
         }
         return res;
     } 
@@ -416,7 +414,7 @@ public:
                     heights[j] = 0;
                 }
             }
-            
+    
             res = max(largestRectangleArea(heights), res);
             
         }
@@ -425,6 +423,7 @@ public:
 };
 ```
 
+ 
+题目2： 给定arr和num,返回满足下列条件的子数组数目   利用窗口最大值更新结构 这题重点看下
 
-题目2： 给定arr和num,返回满足下列条件的子数组数目
  
