--- a/高频题笔记.md
+++ b/高频题笔记.md
@@ -425,5 +425,41 @@ public:
 
  
 题目2： 给定arr和num,返回满足下列条件的子数组数目   利用窗口最大值更新结构 这题重点看下
+[1438. Longest Continuous Subarray With Absolute Diff Less Than or Equal to Limit](https://leetcode.com/problems/longest-continuous-subarray-with-absolute-diff-less-than-or-equal-to-limit)
 
- 
+题目3: 单链表 有环无环问题 相交
+
+题目4： 复杂链表复制问题
+[138. Copy List with Random Pointer](https://leetcode.com/problems/copy-list-with-random-pointer/)
+
+```
+class Solution {
+public:
+    Node* copyRandomList(Node* head) {
+        if (!head) return nullptr;
+        Node *res = new Node(head->val, nullptr, nullptr);
+        Node *node = res, *cur = head->next;
+        unordered_map<Node*, Node*> m;
+        m[head] = res;
+        while (cur) {
+            Node *t = new Node(cur->val, nullptr, nullptr);
+            node->next = t;
+            m[cur] = t;
+            node = node->next;
+            cur = cur->next;
+        }
+        node = res; cur = head;
+        while (cur) {
+            node->random = m[cur->random];
+            node = node->next;
+            cur = cur->next;
+        }
+        return res;
+    }
+};
+```
+
+## 06 算法高频
+
+
+题目5: 机器人走动
