--- a/刷题指南.md
+++ b/刷题指南.md
@@ -24,13 +24,13 @@
 - [ref](#ref)
 # 1. 滑动窗口
 
-[53. 大小为 K 的子数组的最大和](https://leetcode.com/problems/maximum-subarray/)
+~~[53. 大小为 K 的子数组的最大和](https://leetcode.com/problems/maximum-subarray/)~~
 
 [121. Best Time to Buy and Sell Stock](https://leetcode.com/problems/best-time-to-buy-and-sell-stock/)
 
 [3. Longest Substring Without Repeating Characters](https://leetcode.com/problems/longest-substring-without-repeating-characters/)
 
-[239. Sliding Window Maximum](https://leetcode.com/problems/sliding-window-maximum/)
+~~[239. Sliding Window Maximum](https://leetcode.com/problems/sliding-window-maximum/)~~
 
 [剑指 Offer 57 - II. 和为s的连续正数序列](https://leetcode-cn.com/problems/he-wei-sde-lian-xu-zheng-shu-xu-lie-lcof/solution/shi-yao-shi-hua-dong-chuang-kou-yi-ji-ru-he-yong-h/)
 
