--- a/刷题指南.md
+++ b/刷题指南.md
@@ -39,7 +39,7 @@
 双指针通常用在**排好序**的数组或是链表中寻找对子, 或者是merge 或者是排序，或者去除element，反正一般都是头尾各一个指针，然后根据条件移动。【参考[Jaylen's Blog](https://linzhenglearn.github.io/2017/03/29/TwoPointer/#常见题型)】
 [1. Two Sum](https://leetcode.com/problems/two-sum/)（# 也可以用map的方式做）
 
-[167. Two Sum II - Input array is sorted](https://leetcode.com/submissions/detail/299213003/)
+~~[167. Two Sum II - Input array is sorted](https://leetcode.com/submissions/detail/299213003/)~~
 
 [977. Squares of a Sorted Array (很像merge sort里的merge）](https://leetcode.com/problems/squares-of-a-sorted-array/)
 
@@ -53,17 +53,18 @@
 
 [18. 4Sum](https://leetcode.com/problems/4sum/)
 
-[86. Partition List](https://leetcode.com/problems/partition-list/)
+[86. Partition List](https://leetcode.com/problems/partition-list/)  **题目没看懂**
 
-[11. Container With Most Water](https://leetcode.com/problems/container-with-most-water/)
+~~[11. Container With Most Water](https://leetcode.com/problems/container-with-most-water/)~~
 
-[42. Trapping Rain Water](https://leetcode.com/problems/trapping-rain-water/)
+~~[42. Trapping Rain Water](https://leetcode.com/problems/trapping-rain-water/)~~
 
-[75. Sort Colors](https://leetcode.com/problems/sort-colors/)
+~~[75. Sort Colors](https://leetcode.com/problems/sort-colors/)~~
 
-[剑指 Offer 04. 二维数组中的查找](https://leetcode-cn.com/problems/er-wei-shu-zu-zhong-de-cha-zhao-lcof/)
+~~[剑指 Offer 04. 二维数组中的查找](https://leetcode-cn.com/problems/er-wei-shu-zu-zhong-de-cha-zhao-lcof/)  [240. Search a 2D Matrix II](https://leetcode.com/problems/search-a-2d-matrix-ii/)~~
 
 [剑指 Offer 21. 调整数组顺序使奇数位于偶数前面](https://leetcode-cn.com/problems/diao-zheng-shu-zu-shun-xu-shi-qi-shu-wei-yu-ou-shu-qian-mian-lcof/)
+
 # 3. 快慢指针/ 链表题目
 快慢指针是处理linked list常用的套路，通常是用来判断成环以及环的入口，或者是寻找 list中第k个元素。
 
