--- a/刷题指南.md
+++ b/刷题指南.md
@@ -99,11 +99,11 @@
 # 5. 区间合并
 区间合并的问题，通常是重新把区间按照start和end排序，重新组合区间。
 
-[56. Merge Intervals](https://leetcode.com/problems/merge-intervals/)
+~~[56. Merge Intervals](https://leetcode.com/problems/merge-intervals/)~~
 
 [986. Interval List Intersections](https://leetcode.com/problems/interval-list-intersections/)
 
-[57. Insert Interval](https://leetcode.com/problems/insert-interval/)
+~~[57. Insert Interval](https://leetcode.com/problems/insert-interval/)~~
 
 # 6. 无序限定范围的数组元素查找O(N）
 
