add 131. Palindrome Partitioning

--- a/刷题指南.md
+++ b/刷题指南.md
@@ -175,13 +175,13 @@ BFS 通常采用queue 来实现
 
 [40. Combination Sum II](https://leetcode.com/problems/combination-sum-ii/)
 
-[131. Palindrome Partitioning](https://leetcode.com/problems/palindrome-partitioning/) !
+~~[131. Palindrome Partitioning](https://leetcode.com/problems/palindrome-partitioning/) !~~
 
-[17. Letter Combinations of a Phone Number](https://leetcode.com/problems/letter-combinations-of-a-phone-number/) (differ from [91. Decode Ways](https://leetcode.com/problems/decode-ways/))
+~~[17. Letter Combinations of a Phone Number](https://leetcode.com/problems/letter-combinations-of-a-phone-number/) (differ from [91. Decode Ways](https://leetcode.com/problems/decode-ways/))~~
 
-[79. Word Search](https://leetcode.com/problems/word-search/)(same as 剑指 Offer 12. 矩阵中的路径)
+~~[79. Word Search](https://leetcode.com/problems/word-search/)(same as 剑指 Offer 12. 矩阵中的路径)~~
 
-[剑指 Offer 13. 机器人的运动范围](https://leetcode-cn.com/problems/ji-qi-ren-de-yun-dong-fan-wei-lcof/)
+[剑指 Offer 13. 机器人的运动范围](https://leetcode-cn.com/problems/ji-qi-ren-de-yun-dong-fan-wei-lcof/) dfs 简单
 
 # 10. 双堆模式
 
