--- a/刷题指南.md
+++ b/刷题指南.md
@@ -132,7 +132,7 @@ BFS 通常采用queue 来实现
 
 # 8. 树的DFS
 通常采用递归
-[111. Minimum Depth of Binary Tree](https://leetcode.com/problems/minimum-depth-of-binary-tree/)
+~~[111. Minimum Depth of Binary Tree](https://leetcode.com/problems/minimum-depth-of-binary-tree/)~~
 
 [112. Path Sum](https://leetcode.com/problems/path-sum/)
 
