小镇刷题家他又来了

--- a/八股文.md
+++ b/八股文.md
@@ -31,4 +31,26 @@
 
 # 深度排序
 
-### 
+# 粗排
+
+### 框架
+
+#### [阿里粗排技术体系与最新进展分享](https://zhuanlan.zhihu.com/p/355828527)
+
+#### [美团搜索粗排优化的探索与实践](https://zhuanlan.zhihu.com/p/553953132)
+
+### 样本
+
+#### [召回和粗排负样本构造问题](https://zhuanlan.zhihu.com/p/352961688)
+
+#### [负样本为王：评Facebook的向量化召回算法](https://zhuanlan.zhihu.com/p/165064102)
+
+#### [负样本的艺术，再读Facebook双塔向量召回算法](https://zhuanlan.zhihu.com/p/386913612)
+
+#### [双塔模型中的负采样](https://zhuanlan.zhihu.com/p/406783325)
+
+### 评价指标
+
+#### [粗排评价指标(1)](https://zhuanlan.zhihu.com/p/340250384)
+
+#### [看完这篇AUC文章，搞定任何有关AUC的面试不成问题~](https://zhuanlan.zhihu.com/p/360765777)
