小镇刷题家他又来了

--- a/八股文.md
+++ b/八股文.md
@@ -54,3 +54,7 @@
 #### [粗排评价指标(1)](https://zhuanlan.zhihu.com/p/340250384)
 
 #### [看完这篇AUC文章，搞定任何有关AUC的面试不成问题~](https://zhuanlan.zhihu.com/p/360765777)
+
+#### [机器学习的评价指标（一）：Accuracy、Precision、Recall、F1 Score](https://zhuanlan.zhihu.com/p/364253497)
+
+#### [机器学习的评价指标（二）：ROC-AUC和PR-AUC](https://zhuanlan.zhihu.com/p/364299008)
