--- a/八股文.md
+++ b/八股文.md
@@ -39,6 +39,10 @@
 
 #### [美团搜索粗排优化的探索与实践](https://zhuanlan.zhihu.com/p/553953132)
 
+#### [升级换代！Facebook全新电商搜索系统Que2Search](https://zhuanlan.zhihu.com/p/428495241)
+
+#### [KDD'21 | 揭秘Facebook升级版语义搜索技术](https://zhuanlan.zhihu.com/p/415516966)
+
 ### 样本
 
 #### [召回和粗排负样本构造问题](https://zhuanlan.zhihu.com/p/352961688)
@@ -49,6 +53,10 @@
 
 #### [双塔模型中的负采样](https://zhuanlan.zhihu.com/p/406783325)
 
+### 损失函数
+
+#### [召回粗排的损失函数loss function](https://zhuanlan.zhihu.com/p/557416100)
+
 ### 评价指标
 
 #### [粗排评价指标(1)](https://zhuanlan.zhihu.com/p/340250384)
@@ -58,3 +66,15 @@
 #### [机器学习的评价指标（一）：Accuracy、Precision、Recall、F1 Score](https://zhuanlan.zhihu.com/p/364253497)
 
 #### [机器学习的评价指标（二）：ROC-AUC和PR-AUC](https://zhuanlan.zhihu.com/p/364299008)
+
+### 其他
+
+[双塔模型存在的问题以及解决方案【综述】](https://zhuanlan.zhihu.com/p/567981161)
+
+
+
+# 改写
+
+# 对比学习
+
+# BERT相关
