小镇刷题家他又来了-更新八股文

--- a/八股文.md
+++ b/八股文.md
@@ -31,7 +31,7 @@
 
 # 深度排序
 
-# 粗排
+# 召回&粗排
 
 ### 框架
 
@@ -45,6 +45,12 @@
 
 #### [推荐系统粗排之柔：双塔 to NN，Learning to Rank](https://zhuanlan.zhihu.com/p/426679177)
 
+#### [Google Play双塔召回算法](https://zhuanlan.zhihu.com/p/533449018)
+
+#### [双塔召回模型的前世今生（上篇）](https://zhuanlan.zhihu.com/p/430503952)
+
+#### [双塔召回模型的前世今生（下篇）](https://zhuanlan.zhihu.com/p/441597009)
+
 ### 样本
 
 #### [召回和粗排负样本构造问题](https://zhuanlan.zhihu.com/p/352961688)
@@ -54,6 +60,8 @@
 #### [负样本的艺术，再读Facebook双塔向量召回算法](https://zhuanlan.zhihu.com/p/386913612)
 
 #### [双塔模型中的负采样](https://zhuanlan.zhihu.com/p/406783325)
+
+#### [推荐系统（四）—— 负采样](https://zhuanlan.zhihu.com/p/456088223)
 
 ### 损失函数
 
