小镇刷题家他又来了-更新八股文

--- a/八股文.md
+++ b/八股文.md
@@ -79,11 +79,17 @@
 
 ### 其他
 
-[双塔模型存在的问题以及解决方案【综述】](https://zhuanlan.zhihu.com/p/567981161)
+#### [双塔模型存在的问题以及解决方案【综述】](https://zhuanlan.zhihu.com/p/567981161)
 
 
 
-# 改写
+# 多任务学习
+
+#### [代码精读之MMoE](https://zhuanlan.zhihu.com/p/551786848)
+
+#### [mmoe家族的一些summary（待续）](https://zhuanlan.zhihu.com/p/538209695)
+
+# query改写
 
 # 对比学习
 
