小镇刷题家他又来了-更新八股文

--- a/八股文.md
+++ b/八股文.md
@@ -77,6 +77,8 @@
 
 #### [机器学习的评价指标（二）：ROC-AUC和PR-AUC](https://zhuanlan.zhihu.com/p/364299008)
 
+#### [NDCG排序评估指标](https://zhuanlan.zhihu.com/p/448686098)
+
 ### 其他
 
 #### [双塔模型存在的问题以及解决方案【综述】](https://zhuanlan.zhihu.com/p/567981161)
