--- a/八股文.md
+++ b/八股文.md
@@ -36,6 +36,13 @@
 ### 框架
 
 #### [阿里粗排技术体系与最新进展分享](https://zhuanlan.zhihu.com/p/355828527)
+##### 粗排两大技术路线 
+ ###### 集合选择技术
+        集合选择技术是以集合为建模目标，选出满足后续链路需求的集合的方法，该技术路线在召回非常典型，这其实也非常符合粗排的定位。该方法优点是算力消耗一般比较少，缺点是依赖于对后链路的学习，可控性较弱。
+  ###### 精准值预估技术
+      精准值预估技术直接对最终系统目标进行精确值预估，其实也就是pointwise的方式。
+  
+        
 
 #### [美团搜索粗排优化的探索与实践](https://zhuanlan.zhihu.com/p/553953132)
 
