--- a/八股文.md
+++ b/八股文.md
@@ -83,6 +83,7 @@
 #### [机器学习的评价指标（一）：Accuracy、Precision、Recall、F1 Score](https://zhuanlan.zhihu.com/p/364253497)
 
 #### [机器学习的评价指标（二）：ROC-AUC和PR-AUC](https://zhuanlan.zhihu.com/p/364299008)
+#### [图解AUC和GAUC](https://zhuanlan.zhihu.com/p/84350940)
 
 #### [NDCG排序评估指标](https://zhuanlan.zhihu.com/p/448686098)
 
