--- a/八股文.md
+++ b/八股文.md
@@ -59,6 +59,12 @@
 #### [双塔召回模型的前世今生（下篇）](https://zhuanlan.zhihu.com/p/441597009)
 
 ### 样本
+#### 目标: 拟合精排模型。即粗排尽可能圈出精排模型能排到前面的item。
+    对于粗排模型打分比较靠前的样本（比如top5），精排模型却把这部分样本打分很低(比如top250～300)，那么，粗排打分很靠前的这几条样本是不会被曝光的，因此当我们复用精排模型的样本来训练粗排模型时，粗排模型是看不到这几条bad case的样本的，新粗排模型上线后，这几条样本很可能还被粗排模型排到靠前的位置。如果我们把这几条样本作为负样本来训练粗排模型，那么新的模型大概率就可以把这几条样本排到靠后的位置了。
+####  离线训练数据的分布，应该与线上实际应用的数据，保持一致 。
+
+排序其目标是“从用户可能喜欢的当中挑选出用户最喜欢的”，是为了优中选优。与召回相比，排序面对的数据环境，简直就是 温室里的花朵 。
+召回是“是将用户可能喜欢的，和海量对用户根本不靠谱的，分隔开”，所以召回在线上所面对的数据环境，就是 鱼龙混杂、良莠不齐 。
 
 #### [召回和粗排负样本构造问题](https://zhuanlan.zhihu.com/p/352961688)
 
