--- a/八股文.md
+++ b/八股文.md
@@ -79,6 +79,7 @@
 ### 损失函数
 
 #### [召回粗排的损失函数loss function](https://zhuanlan.zhihu.com/p/557416100)
+ 为什么粗排不用精排一样的pointwise损失函数，看过网上的解释，大致概括为1、粗排不需要像精排一样预估一个有具体含义的概率值，如ctr，只需要把正负例拉开即可。那么pointwise loss也能拉开啊，还真不是：2、pointwise loss有个不足，如第500名和1000名在pointwise 设定里都是负例，label都是0，模型无法区分谁更优秀，但是pairwise的设定可以，500>1000可以作为一对有信息量的pair进行训练。有些人要说，一个有一定正例且训练充分的pointwise模型总归知道500名比1000名强吧，而且pointwise的可能训练起来更稳定好收敛易上手，不一定比pairwise出来的模型差。想知道挖掘机哪家强，还是先好好学开挖掘机
 
 ### 评价指标
 
